crates/apollo_storage/src/serialization/snapshots/papyrus_storage__serialization__serializers_test__hints_regression_hint_4056.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 15
- 216
- 1
- 49
- 0
- 0
- 9
- 0
- 0
- 4
- 0
- 2
- 144
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 8
- 2
- 144
- 254
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 0
- 254
- 255
- 0
- 255
- 255

