crates/apollo_storage/src/serialization/snapshots/papyrus_storage__serialization__serializers_test__hints_regression_hint_4170.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 16
- 74
- 1
- 6
- 0
- 0
- 0
- 0
- 0
- 0

